# Project-Django

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: handlers.py  schemas.py
core/api/v1/products/: filters.py  handlers.py  schemas.py
core/api/v1/reviews/: handlers.py  schemas.py
core/apps/common/: apps.py  enum.py  exception.py  models.py
core/apps/common/clients/: elasticsearch.py
core/apps/customers/: admin.py  apps.py  entities.py  models.py
core/apps/customers/exception/: codes.py  customer.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_token.py
core/apps/customers/services/: auth.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py  apps.py  containers.py
core/apps/products/entities/: products.py  reviews.py
core/apps/products/exception/: products.py  reviews.py
core/apps/products/filters/: products.py
core/apps/products/migrations/: 0001_initial.py  0002_product_tags.py  0002_productreview.py
core/apps/products/models/: __init__.py  products.py  reviews.py
core/apps/products/services/: products.py  reviews.py  search.py
core/apps/products/use_cases/reviews/: create.py
core/project/: asgi.py  containers.py  middlewares.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: monitoring.yaml  storages.yaml
scalar_django_ninja/: __init__.py  scalar_django_ninja.py
tests/factories/: products.py
tests/services/: conftest.py  test_products.py
(+2 files in other folders)
